feat: add video upload and management functionality with S3 storage, API endpoints, and database persistence.